# drrik

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml
drrik/: __init__.py  autoencoder.py  cli.py  config.py  models.py  settings.py  visualization.py
examples/: advanced_pipeline.py  basic_usage.py  load_saved_activations.py  with_wandb.py
tests/: conftest.py  test_imports.py  test_settings.py
